fix: Use a consistent color for highlighting in the slides/css/styles.css.

--- a/slides/css/styles.css
+++ b/slides/css/styles.css
@@ -14,13 +14,13 @@
 }
 
 .reveal code {
-  color: #d73a49;
+  color: #ff5722;
   background-color: rgba(0, 0, 0, 0);
   white-space: pre-wrap;
 }
 
 code span.bu {
-  color: #d73a49;
+  color: #ff5722;
 }
 
 p.codespacer {
