--- a/_include/html/header-include.html
+++ b/_include/html/header-include.html
@@ -1,3 +1,3 @@
-<meta name="theme-color" content="#2e5799"/>
+<meta name="theme-color" content="#03a9f4"/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
