--- a/css/styles.css
+++ b/css/styles.css
@@ -58,14 +58,14 @@ div.callout-note.callout {
 
 .sidebar nav[role="doc-toc"] ul>li>a.active,
 .sidebar nav[role="doc-toc"] ul>li>ul>li>a.active {
-  border-left: 1px solid #2e5799;
-  color: #2e5799 !important;
+  border-left: 1px solid #03a9f4;
+  color: #03a9f4 !important;
 }
 
 .sidebar nav[role="doc-toc"] ul>li>a:hover,
 .sidebar nav[role="doc-toc"] ul>li>ul>li>a:hover {
-  color: #2e5799 !important;
-  text-decoration-color: #2e5799;
+  color: #03a9f4 !important;
+  text-decoration-color: #03a9f4;
   text-underline-offset: 0.3em;
 }
 
