--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,6 @@ body a:hover {
   box-shadow: none;
 }
 
-
 .navbar .navbar-nav .nav-link.active {
   color: #fdfdff !important;
   box-shadow: 0 0 0 2px #fdfdff;
@@ -80,6 +79,7 @@ body a:hover {
 }
 
 div.callout-note.callout {
+  padding-top: 1em;
   border-left-color: #03a9f4;
 }
 
@@ -104,9 +104,8 @@ div.callout-note.callout {
 
 .callout.callout-titled .callout-body> :last-child:not(.sourceCode),
 .callout.callout-titled .callout-body>div> :last-child:not(.sourceCode) {
-  padding-bottom: 0.5rem;
-  margin-bottom: 0;
-  margin-top: 1em;
+  padding-bottom: 0em !important;
+  padding-top: 1em !important;
 }
 
 div.quarto-post a {
