feat: Improve the styling of the source code blocks in the main site in css/styles.css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -217,4 +217,23 @@ h2,
   color: #2e5799 !important;
 }
 
+div.sourceCode {
+    background-color: #fff !important;
+    border: none;
+    padding: 0;
+}
+
+pre.sourceCode {
+  border-left: 3px;
+  border-left-style: solid;
+  border-left-color: #03a9f4;
+  padding: .5em;
+  margin-left: 0.15em;
+  border-right: 1px solid #dee2e6;
+  border-top: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
+  font-size: 0.875em;
+  overflow: visible !important;
+}
+
 /* }}} */
