fix: Use the correct background color for code blocks in css/styles.css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,12 @@ div.sourceCode {
   padding: 0;
 }
 
+code {
+  background-color: #fff !important;
+  border: none;
+  padding: 0;
+}
+
 pre.sourceCode {
   border-left: 3px;
   border-left-style: solid;
